Closed Bug 1295902 Opened 9 years ago Closed 9 years ago

Only use build id for Intel blocklist entry 'FEATURE_FAILURE_BUG_1203199_1'

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: ethlin, Assigned: cleu)

References

(Blocks 1 open bug)

Details

(Whiteboard: [gfx-noted])

Attachments

(2 files, 1 obsolete file)

In bug 1203199, we add this entry[1] to blocklist: /* Bug 1203199/1092166: DXVA startup crashes on some intel drivers. */ APPEND_TO_DRIVER_BLOCKLIST_RANGE(OperatingSystem::Windows, (nsAString&)GfxDriverInfo::GetDeviceVendor(VendorIntel), GfxDriverInfo::allDevices, nsIGfxInfo::FEATURE_HARDWARE_VIDEO_DECODING, nsIGfxInfo::FEATURE_BLOCKED_DRIVER_VERSION, DRIVER_BETWEEN_INCLUSIVE, V(9,17,10,0), V(9,17,10,2849), "FEATURE_FAILURE_BUG_1203199_1", "Intel driver > 9.17.10.2849"); Per discussion in bug 1294771, we should investigate what we are trying to block and see if we should use build id for this. [1] https://hg.mozilla.org/mozilla-central/annotate/054d4856cea6150a6638e5daf7913713281af97d/widget/windows/GfxInfo.cpp#l1152
Whiteboard: [gfx-noted]
Assignee: nobody → cleu
Attached image snapshot2.png
Attachment #8786625 - Flags: review?(ethlin)
Depends on: 1295899
Attachment #8786625 - Flags: review?(ethlin) → review+
Change recommended driver version to X.X.X.(build id)
Attachment #8786625 - Attachment is obsolete: true
Attachment #8787049 - Flags: review?(milan)
Attachment #8787049 - Flags: review?(milan) → review+
Keywords: checkin-needed
Pushed by cbook@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/b201516b0558 Only use build id for Intel blocklist entry 'FEATURE_FAILURE_BUG_1203199_1'. r=ethlin
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Regressions: 1762125
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: