Bug 1295902 - Only use build id for Intel blocklist entry 'FEATURE_FAILURE_BUG_1203199_1'. r=ethlin